# Data-Warehouse-Intelligence-Assistant

./: .env.example  .gitignore  CDWIA_Production_Review_and_Recommendations.txt  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: sql_allowlist.yaml
policy/: cdwia.rego
src/cdwia/common/: audit.py  cache.py  config.py  models.py
src/cdwia/control_plane/: classifier.py  cost_router.py  planner.py  policy.py
src/cdwia/data_plane/hybrid/: orchestrator.py
src/cdwia/data_plane/knowledge_agent/: retrieval.py
src/cdwia/data_plane/sql_agent/: executor.py  validator.py
src/cdwia/gateway/: main.py
src/cdwia/ingestion/: pipeline.py
src/cdwia/synthesizer/: guardrails.py  synthesizer.py
tests/: test_classifier.py  test_sql_validator.py
