[project]
name = "cdwia"
version = "2.0.0"
description = "Cloud Data Warehouse Intelligence Assistant — production architecture"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
